--- a/app/src/main/res/layout/_profile.xml
+++ b/app/src/main/res/layout/_profile.xml
@@ -32,7 +32,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/profilbuttons"
         tools:layout_editor_absoluteY="594dp"
-        app:layout_constraintTop_toBottomOf="profiletextView4"
+        app:layout_constraintBottom_toBottomOf="parent"
         />
 
     <Button
@@ -46,7 +46,7 @@
         app:backgroundTint="#FFB700"
         app:iconTint="#303135"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintStart_toBottomOf="profiletextView4"
+        app:layout_constraintBottom_toBottomOf="parent"
         tools:layout_editor_absoluteY="583dp" />
 
     <TextView
@@ -107,10 +107,8 @@
         android:textSize="14sp"
         app:drawableTint="#303135"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         tools:layout_editor_absoluteY="469dp"
-        app:layout_constraintTop_toBottomOf="profiletextView3" />
-
-
-
+         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
