--- a/app/src/main/res/layout/_profile.xml
+++ b/app/src/main/res/layout/_profile.xml
@@ -4,9 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
-
+    android:layout_height="match_parent">
 
     <View
         android:id="@+id/background_col"
@@ -24,16 +22,17 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.307"
         app:srcCompat="@drawable/profile" />
+
     <ImageView
         android:id="@+id/imageView6"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="0dp"
+        android:layout_height="90dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/profilbuttons"
-        tools:layout_editor_absoluteY="594dp"
-        app:layout_constraintTop_toBottomOf="profiletextView4"
-        />
+
+
+        tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/profilebutton"
@@ -41,13 +40,14 @@
         android:layout_height="54dp"
         android:fontFamily="sans-serif-medium"
         android:text="Edit profile"
+        android:textAllCaps="false"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textColor="#202125"
+        android:textColor="@color/dark_txt"
+        android:textSize="24sp"
         app:backgroundTint="#FFB700"
         app:iconTint="#303135"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintStart_toBottomOf="profiletextView4"
-        tools:layout_editor_absoluteY="583dp" />
+        app:layout_constraintBottom_toTopOf="@id/imageView6" />
 
     <TextView
         android:id="@+id/profiletextView1"
@@ -63,7 +63,7 @@
         app:drawableTint="#303135"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-         />
+        />
 
     <TextView
         android:id="@+id/profiletextView2"
@@ -76,9 +76,9 @@
         android:textSize="14sp"
         app:drawableTint="#303135"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="357dp"
+
         app:layout_constraintTop_toBottomOf="@id/profiletextView1"
-         />
+        />
 
     <TextView
         android:id="@+id/profiletextView3"
@@ -92,9 +92,9 @@
         android:textStyle="bold"
         app:drawableTint="#303135"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="447dp"
+
         app:layout_constraintTop_toBottomOf="@id/profiletextView2"
-         />
+        />
 
     <TextView
         android:id="@+id/profiletextView4"
@@ -107,8 +107,8 @@
         android:textSize="14sp"
         app:drawableTint="#303135"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="469dp"
-        app:layout_constraintTop_toBottomOf="profiletextView3" />
+        app:layout_constraintTop_toBottomOf="@id/profiletextView3"
+        />
 
 
 
